fix(Table): add auto overflow-x for managing large table content

--- a/packages/react-components/src/components/table/table.module.css
+++ b/packages/react-components/src/components/table/table.module.css
@@ -7,6 +7,10 @@
     z-index: 0;
   }
 
+  .TableWrapper {
+    overflow-x: auto;
+  }
+
   .TableWrapper[data-table-scrolling='true'] {
     -webkit-overflow-scrolling: touch;
     overflow: auto;
